ownCloud/ownCloud-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: owncloud
  namespace: default
  labels:
    app: cheese
    task: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheese
      task: owncloud
  template:
    metadata:
      labels:
        app: cheese
        task: owncloud
        version: v0.0.1
    spec:
      nodeSelector:
        role: shileizcc.com
      containers:
      - name: owncloud
        image: owncloud/server:10.0.8
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
          - mountPath: "/mnt/data"
            name: data
      volumes:
        - hostPath:
            path: "/var/data/ownCloud/data"
          name: data
